# nau7802-strain-gauge

./: .canon.yaml  .gitignore  Cargo.toml  README.md
.embuild/espressif/tools/cmake/3.23.1/CMake.app/Contents/: CodeResources  Info.plist
.embuild/espressif/tools/cmake/3.23.1/CMake.app/Contents/PlugIns/styles/: libqmacstyle.dylib
.embuild/espressif/tools/cmake/3.23.1/CMake.app/Contents/_CodeSignature/: CodeResources
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/lib/ldscripts/: elf32xtensa.x  elf32xtensa.xbn  elf32xtensa.xc  elf32xtensa.xce  elf32xtensa.xd  elf32xtensa.xdc  elf32xtensa.xdce  elf32xtensa.xde  elf32xtensa.xdw  elf32xtensa.xdwe  elf32xtensa.xe  elf32xtensa.xn  elf32xtensa.xs  elf32xtensa.xsc  elf32xtensa.xsce  elf32xtensa.xse  elf32xtensa.xsw  elf32xtensa.xswe  elf32xtensa.xw  elf32xtensa.xwe
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/share/gdb/: gdbinit
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/xtensa-esp32-elf/lib/: libstdc++.a-gdb.py
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/xtensa-esp32-elf/lib/esp32-psram/: libstdc++.a-gdb.py
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/xtensa-esp32-elf/lib/no-rtti/: libstdc++.a-gdb.py
.embuild/espressif/tools/xtensa-esp32-elf/esp-2021r2-patch5-8.4.0/xtensa-esp32-elf/xtensa-esp32-elf/sys-include/: COPIED
src/: lib.rs
(+12 files in other folders)
