[package]
name = "nau7802-strain-gauge"
version = "0.1.9-rc3"
edition = "2021"
authors = ["randhid <rand@viam.com>"]
resolver = "2"
rust-version = "1.75"

[dependencies]
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], version = "0.1.9-rc3", rev = "4f0814a"}

[package.metadata.com.viam]
module = true
