[package]
name = "nau-7802"
version = "0.1.9-rc3"
edition = "2021"
authors = ["randhid <rand@viam.com>"]
resolver = "2"
rust-version = "1.75"

[dependencies]
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], version = "0.3.0", rev = "4a00116"}

[package.metadata.com.viam]
module = true
