[package]
name = "nau-7802"
version = "0.1.9-rc3"
edition = "2021"
authors = ["randhid <rand@viam.com>"]
resolver = "2"
rust-version = "1.75"

[dependencies]
log = "0.4.22"
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32"], version = "0.3.0", rev = "bf1d6fa"}
byteorder = "1.4"  # or the latest version

[package.metadata.com.viam]
module = true
